RESOLVED FIXED174017
[iOS DnD] Drag caret rect is incorrectly computed when dropping in editable content in iframes
https://bugs.webkit.org/show_bug.cgi?id=174017
Summary [iOS DnD] Drag caret rect is incorrectly computed when dropping in editable c...
Wenson Hsieh
Reported 2017-06-30 01:47:52 PDT
Attachments
Patch (19.89 KB, patch)
2017-06-30 02:09 PDT, Wenson Hsieh
no flags
Rebase on master (20.07 KB, patch)
2017-06-30 02:21 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-06-30 02:09:10 PDT
Ryosuke Niwa
Comment 2 2017-06-30 02:14:02 PDT
Looks like you need to rebase the patch against trunk.
Wenson Hsieh
Comment 3 2017-06-30 02:21:06 PDT
Created attachment 314254 [details] Rebase on master
Wenson Hsieh
Comment 4 2017-06-30 08:39:05 PDT
Comment on attachment 314254 [details] Rebase on master Thanks Simon!
WebKit Commit Bot
Comment 5 2017-06-30 09:08:24 PDT
Comment on attachment 314254 [details] Rebase on master Clearing flags on attachment: 314254 Committed r218998: <http://trac.webkit.org/changeset/218998>
WebKit Commit Bot
Comment 6 2017-06-30 09:08:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.